--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,54 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.block-loading {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.48);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1000;
+  color: #fff;
+  font-weight: bold;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.bounce {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+}
+
+.bounce>div {
+  width: 18px;
+  height: 18px;
+  background-color: #3e3b3b;
+  border-radius: 100%;
+  display: inline-block;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.bounce .bounce1 {
+  animation-delay: -0.32s;
+}
+
+.bounce .bounce2 {
+  animation-delay: -0.16s;
+}
+
+@keyframes sk-bouncedelay {
+0%,
+80%,
+100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1.0);
+  }
+}
