--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,3 +68,21 @@
   stroke: #fff;
   stroke-width: 1;
 }
+.svg-icon {
+  width: 1em;
+  height: 1em;
+}
+
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
+  fill: #4691f6;
+}
+
+.svg-icon circle {
+  stroke: #4691f6;
+  stroke-width: 1;
+}
+.txt:hover {
+  text-decoration: underline;
+}
