--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,23 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+/* -----
+SVG Icons - svgicons.sparkk.fr
+----- */
+
+// .svg-icon {
+//     width: 1em;
+//     height: 1em;
+//   }
+  
+//   .svg-icon path,
+//   .svg-icon polygon,
+//   .svg-icon rect {
+//     fill: #4691f6;
+//   }
+  
+//   .svg-icon circle {
+//     stroke: #4691f6;
+//     stroke-width: 1;
+//   }
